# doc2json

./: README.md  pyproject.toml
docparser/: java.py  kotlin.py
examples/kotlin/kotlin.collections/: -iterable.html  -list.html  -mutable-list.html  [60]no name provided[62].html  add-all.html  aggregate-to.html  aggregate.html  all.html  any.html  array-list-of.html  as-byte-array.html  as-int-array.html  as-iterable.html  as-list.html  as-long-array.html  as-reversed.html  as-sequence.html  as-short-array.html  as-u-byte-array.html  as-u-int-array.html  as-u-long-array.html  as-u-short-array.html  associate-by-to.html  associate-by.html  associate-to.html  associate-with-to.html  associate-with.html  associate.html  average.html  binary-search-by.html  binary-search.html  build-list.html  build-map.html  build-set.html  chunked.html  component1.html  component2.html  component3.html  component4.html  component5.html  (+228 more)
examples/scala/html-docs/: index.html
examples/scala/json-docs/: scala.collection.AbstractIndexedSeqView.json  scala.collection.AbstractIterable.json  scala.collection.AbstractIterator.json  scala.collection.AbstractMap.json  scala.collection.AbstractMapView.json  scala.collection.AbstractSeq.json  scala.collection.AbstractSeqView.json  scala.collection.AbstractSet.json  scala.collection.AbstractView.json  scala.collection.AnyStepper.AnyStepperSpliterator.json  scala.collection.AnyStepper.json  scala.collection.ArrayOps.WithFilter.json  scala.collection.ArrayOps.json  scala.collection.BitSet.json  scala.collection.BitSetOps.json  (+393 more)
(+1622 files in other folders)
